--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
-.sidebar {
-  width: 30%;
+/* .sidebar {
+  width: 90%;
   float: right;
   background-color:#33FFFF;
-}
+} */
 
 img.resize {
-  max-width:30%;
-  max-height:30%;
+  max-width:60%;
+  max-height:60%;
+}
+
+.leftphoto {
+  float: left;
+  /* background-color:#33FFFF; */
+}
+
+.rightphoto {
+  float: right;
+  /* background-color:#33FFFF; */
 }
