--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {background-color: coral;}
 
 
 .sidebar {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 150%;
   width: -20%;
   float: right;
   background-color:#fff3e6;
@@ -18,6 +20,7 @@ img.resize {
 
 .leftphoto {
   float: left;
+  font-family: "Times New Roman", Times, serif;
   /* background-color:#33FFFF; */
 }
 
